--- a/node/auth/public/mystyle.css
+++ b/node/auth/public/mystyle.css
@@ -1,58 +1,107 @@
 body {
-    background-color: rgb(155, 232, 235);
+    background-color: mistyrose;
     font: bold 19px monospace, sans-serif;
-}
-h3 {
-    color: lightslategray;
+  }
+  h3 {
+    color: purple;
     margin-left: 20px;
-}
-hr {
-    border: 5px solid rgb(198, 164, 253);
-}
-input {
-    color: rgb(31, 156, 240);
+  }
+  hr {
+    border: 5px solid yellowgreen;
+  }
+  input {
+    color: black;
     font-size: 15px;
-}
-button {
-    color: rgb(248, 204, 110);
+  }
+  button {
+    background-color: rgb(158, 220, 60);
+    border: 1px groove black;
+    width: 120px;
+    height: 30px;
+    padding: 5px;
     font-size: 15px;
-}
-a {
-	font-family: monospace;
+  }
+  a {
+    font-family: monospace;
     font-size: 18px;
-    color: rgb(238, 206, 27);
-}
-input[type="text"] {
-    background-color: rgb(253, 206, 187);
-}
-input[type="password"] {
-    background-color: lemonchiffon;
-}
-#round { 
-    border-image: url("media/border.png") 30 round; 
-}
-#repeat {
-    border-image: url("media/border.png") 30 repeat; 
-}
-#stretch { 
-    border-image: url("media/border.png") 30 stretch; 
-}
-div.box {
-	background : rgb(197, 250, 213);
-	border-style : solid;
- 	border-color : rgb(147, 241, 59);
-    border-radius : 35px;
-    border-image: ;
+    color: #ff1493;
+  }
+  input[type="text"] {
+    background-color: lightblue;
+    border: 1px groove black;
+  }
+  input[type="password"] {
+    background-color: rgb(236, 186, 186);
+    border: 1px groove black;
+  }
+  input[type="submit"] {
+    background-color: rgb(158, 220, 60);
+    border: 1px groove black;
+    width: 80px;
+    height: 30px;
+    padding: 5px;
+  }
+  input[type="reset"] {
+    background-color: rgb(60, 220, 215);
+    border: 1px groove black;
+    width: 80px;
+    height: 30px;
+    padding: 5px;
+  }
+  input[type="button"] {
+    background-color: rgb(158, 220, 60);
+    border: 1px groove black;
+    width: 120px;
+    height: 30px;
+    padding: 5px;
+  }
+  div.box {
+    background: rgba(136, 136, 90, 0.109);
+    border-style: solid;
+    border-color: peru;
+    border-radius: 35px;
     width: 350px;
     height: 180px;
-
-	margin : 100px;
-	border-width : 1px;	
-	padding : 50px;
-}
-div.box-inner {
-    border-style : none; 
+  
+    margin: 70px;
+    border-width: 1px;
+    padding: 50px;
+  }
+  div.box-inner {
+    border-style: none;
     text-align: center;
-	margin : 10px;
-	padding : 10px;
-}
+    margin: 10px;
+    padding: 10px;
+  }
+  div.noround {
+    border-style: solid;
+    border-color: peru;
+    width: 350px;
+    height: 180px;
+  
+    margin: 70px;
+    border-width: 1px;
+    padding: 50px;
+  }
+  
+  #menubar {
+    background: olive;
+  }
+  #menubar ul {
+    /* 여백과 패딩 모두 0 */
+    margin: 0;
+    padding: 0;
+    width: 567px; /* 모든 아이템(<li>)을 한 줄에 품을 수 있는 폭 */
+  }
+  #menubar ul li {
+    display: inline-block; /* 새 줄로 넘어가지 않게 */
+    list-style-type: none; /* 마커 삭제 */
+    padding: 0px 15px; /* top=bottom=0, left=right=15px */
+  }
+  #menubar ul li a {
+    color: white;
+    text-decoration: none; /* 링크 보이지 않게 */
+  }
+  #menubar ul li a:hover {
+    color: rgb(21, 217, 184); /* 마우스 올라 갈 때 색 */
+  }
