--- a/node/auth/public/mystyle.css
+++ b/node/auth/public/mystyle.css
@@ -1,5 +1,8 @@
 body {
-    background-color: mistyrose;
+    background-image: url("https://file3.instiz.net/data/file3/2018/01/31/3/e/8/3e85eae48e411504bc2b32e421796fa1.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    // background-color: mistyrose;
     font: bold 19px monospace, sans-serif;
   }
   h3 {
@@ -16,6 +19,8 @@ body {
   button {
     background-color: rgb(158, 220, 60);
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
     width: 120px;
     height: 30px;
     padding: 5px;
@@ -29,14 +34,20 @@ body {
   input[type="text"] {
     background-color: lightblue;
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
   }
   input[type="password"] {
     background-color: rgb(236, 186, 186);
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
   }
   input[type="submit"] {
     background-color: rgb(158, 220, 60);
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
     width: 80px;
     height: 30px;
     padding: 5px;
@@ -44,6 +55,8 @@ body {
   input[type="reset"] {
     background-color: rgb(60, 220, 215);
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
     width: 80px;
     height: 30px;
     padding: 5px;
@@ -51,13 +64,15 @@ body {
   input[type="button"] {
     background-color: rgb(158, 220, 60);
     border: 1px groove black;
+    border-style: dotted solid;
+    border-radius: 45px;
     width: 120px;
     height: 30px;
     padding: 5px;
   }
   div.box {
     background: rgba(136, 136, 90, 0.109);
-    border-style: solid;
+    border-style: dotted solid;
     border-color: peru;
     border-radius: 35px;
     width: 350px;
@@ -68,13 +83,15 @@ body {
     padding: 50px;
   }
   div.box-inner {
-    border-style: none;
+    // border-style: none;
+    border-style: dotted solid;
+    border-radius: 45px;
     text-align: center;
     margin: 10px;
     padding: 10px;
   }
   div.noround {
-    border-style: solid;
+    border-style: dotted solid;
     border-color: peru;
     width: 350px;
     height: 180px;
@@ -104,4 +121,38 @@ body {
   }
   #menubar ul li a:hover {
     color: rgb(21, 217, 184); /* 마우스 올라 갈 때 색 */
+  }
+  table {
+    /* 이중 테두리 제거 */
+    border-collapse: collapse;
+  }
+  th {
+    text-align: center;
+    padding: 5px;
+    height: 15px;
+    width: 100px;
+  }
+  td {
+    text-align: left;
+    padding: 5px;
+    height: 15px;
+    width: 100px;
+  }
+  thead,
+  tfoot {
+    /* <thead>의 모든 셀에 적용 */
+    background: p;
+    color: lightcyan;
+  }
+  tbody tr:nth-child(odd) {
+    /* 홀수 <tr>에 적용*/
+    background: rgb(229, 247, 241);
+  }
+  tbody tr:nth-child(even) {
+    /* 짝수 <tr>에 적용*/
+    background: rgb(255, 255, 232);
+  }
+  tbody tr:hover {
+    /* 마우스가 올라올때 배경 */
+    background: lightcoral;
   }
