--- a/node/auth/public/mystyle.css
+++ b/node/auth/public/mystyle.css
@@ -6,18 +6,18 @@ body {
     font: bold 19px monospace, sans-serif;
   }
   h3 {
-    color: purple;
+    color: rgb(250, 192, 144);
     margin-left: 20px;
   }
   hr {
-    border: 5px solid yellowgreen;
+    border: 5px solid rgb(165, 234, 252);
   }
   input {
     color: black;
     font-size: 15px;
   }
   button {
-    background-color: rgb(158, 220, 60);
+    background-color: beige;
     border: 1px groove black;
     border-style: dotted solid;
     border-radius: 45px;
@@ -32,7 +32,7 @@ body {
     color: #ff1493;
   }
   input[type="text"] {
-    background-color: lightblue;
+    background-color: rgb(233, 250, 194);
     border: 1px groove black;
     border-style: dotted solid;
     border-radius: 45px;
@@ -62,7 +62,7 @@ body {
     padding: 5px;
   }
   input[type="button"] {
-    background-color: rgb(158, 220, 60);
+    background-color: rgb(181, 196, 248);
     border: 1px groove black;
     border-style: dotted solid;
     border-radius: 45px;
@@ -83,8 +83,8 @@ body {
     padding: 50px;
   }
   div.box-inner {
-    // border-style: none;
-    border-style: dotted solid;
+    border-style: none;
+    //border-style: dotted solid;
     border-radius: 45px;
     text-align: center;
     margin: 10px;
