--- a/node/miniproj/public/mystyle.css
+++ b/node/miniproj/public/mystyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://file3.instiz.net/data/file3/2018/01/31/3/e/8/3e85eae48e411504bc2b32e421796fa1.jpg");
+    background-image: url("https://previews.123rf.com/images/jossdiim/jossdiim1603/jossdiim160300010/54702080-%EC%84%B8%EC%B0%A8%EC%9E%A5-%EC%84%A0%ED%98%95-%EB%94%94%EC%9E%90%EC%9D%B8-%EC%9E%90%EB%8F%99%EC%B0%A8-%EC%84%9C%EB%B9%84%EC%8A%A4-%EB%AC%BC-%EB%B0%8F-%EA%B9%A8%EB%81%97%ED%95%9C-%EC%9E%90%EB%8F%99-%EC%B0%A8%EA%B3%A0-%EC%97%AD-%EB%B2%A1%ED%84%B0-%EC%9D%BC%EB%9F%AC%EC%8A%A4%ED%8A%B8.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
     // background-color: mistyrose;
